@@ -1,3 +1,6 @@
+2008-12-16 Added markevery property to Line2D to support subsampling
+           of markers - JDH
+
 2008-12-15 Removed mpl_data symlink in docs.  On platforms that do not
            support symlinks, these become copies, and the font files
            are large, so the distro becomes unneccessarily bloaded.
